# CAPSTONE_PROJECT_V2

./: .env  .env.example  .gitignore  CONTRIBUTING.md  OCR_QUICK_REFERENCE.md  README.md  README_OCR_CHANGES.md  environment.yml  ocr_quality_analyzer.py  ppocr_keys_v1.txt  pyproject.toml  requirements.txt  start_training.bat  testing.py
app/pages/: __init__.py
capstone_ocr/trained_model/: best_accuracy.pdopt  best_accuracy.pdparams  best_accuracy.states  config.yml  iter_epoch_1.pdopt  iter_epoch_1.pdparams  iter_epoch_1.states  iter_epoch_2.pdopt  iter_epoch_2.pdparams  iter_epoch_2.states  iter_epoch_3.states  latest.pdopt  latest.pdparams  latest.states
config/: api_config.py  settings.yaml
data/: abbreviations.json
data/ocr_output/: 1000-receipt.txt  1001-receipt.txt  1002-receipt.txt  1003-receipt.txt  1004-receipt.txt  1005-receipt.txt  1006-receipt.txt  1007-receipt.txt  1008-receipt.txt  1009-receipt.txt  1010-receipt.txt  1011-receipt.txt  1012-receipt.txt  1013-receipt.txt  1014-receipt.txt  1015-receipt.txt  1016-receipt.txt  1017-receipt.txt  1018-receipt.txt  1019-receipt.txt  1020-receipt.txt  1021-receipt.txt  1022-receipt.txt  1023-receipt.txt  1024-receipt.txt  1025-receipt.txt  1027-receipt.txt  1028-receipt.txt  1029-receipt.txt  1030-receipt.txt  (+149 more)
src/: nutritional_retrieval.py  ocr.py  ocr_config.py  receipt_parser.py  train_ocr.py
tests/: test_nutrition.py  test_ocr.py  test_ocr_improvements.py
text_info/: COLAB_SETUP_GUIDE.md  OCR_IMPROVEMENTS_GUIDE.md  OCR_TRAINING_GUIDE.md  OCR_UPDATES_SUMMARY.md
tools/: generate_char_dict.py
(+19 files in other folders)
